@@ -174,8 +174,7 @@
 </includes>
 <functions>
     <function access="protected">keyPressEvent( QKeyEvent * e )</function>
-    <function access="protected">focusInEvent(QFocusEvent *)</function>
-    <function access="protected">focusOutEvent(QFocusEvent *)</function>
+    <function access="protected" returnType="bool">event( QEvent * e )</function>
 </functions>
 <pixmapinproject/>
 <layoutdefaults spacing="6" margin="11"/>
