@@ -1,6 +1,6 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
-CVS ktigcc-1-branch (2007-03-02):
+CVS ktigcc-1-branch (2007-04-03):
 
 * Added a full changelog (generated from CVS logs).
 * Fixed stray indentation at the end of the line when autoclosing a curly brace
@@ -10,6 +10,8 @@ CVS ktigcc-1-branch (2007-03-02):
 * Don't hardcode ~/.kde for the KDEHOME directory.
 * Fixed missing word wrap on the data variable reloc label in Program Options.
 * Fixed A68k items in the New menu being shown even when A68k is not installed.
+* Don't grab the keyboard globally (stealing key presses from other apps) in the
+  Errors&Warnings pane, only override the Ctrl+C and Ctrl+Ins accelerators.
 
 
 KTIGCC 1.06 (2006-11-25):
